Prevent text overlapping advertiser logo

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -254,8 +254,8 @@ a {
 .square-logo {
 	.logo-base();
 	// Square size that occupies 1/3 of screen-width
-	width: 32vw;
-	height: 32vw;
+	width: 320px;
+	height: 320px;
 
 	// Want to position child elements absolutely
 	position: relative;
@@ -271,10 +271,9 @@ a {
 
 	.text-container {
 		position: absolute;
-		top: 0.5rem;
-		right: 0.5rem;
+		bottom: 0.5rem;
+		left: 0.5rem;
 
-		text-align: right;
 		width: 100%;
 	}
 }
